#2 Class compile error classname XXX collides with a package when using Eclipse JDT core version > 3.18 (#3)
* Update Gradle to v6.7

* Upgrade to Commons Lang3 v3.11 and resolve deprecation warnings

* Fixed isPackage() to not return true for types